platform/security/policies/kyverno/templates/disallow-latest.tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag

spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Images must have an explicit tag."
        pattern:
          spec:
            containers:
              - image: "*:*"

    - name: disallow-latest-tag
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Using the latest image tag is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
