platform/security/policies/kyverno/templates/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root

spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: require-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Containers must run as non-root."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
