platform/security/policies/kyverno/templates/require-probes.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-probes

spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: require-liveness-readiness
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Containers must define readiness and liveness probes."
        pattern:
          spec:
            containers:
              - readinessProbe:
                  {}
                livenessProbe:
                  {}
