platform/security/policies/kyverno/templates/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources

spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: require-requests-limits
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "CPU and memory requests and limits are required."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
